--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kinich</title>
+</head>
 
+<body>
+    <h1>Kinich</h1>
+
+    <p>como fazer um site</p>
+
+   <img src="download.jpeg" alt="pato">
+</body>
+
+</html>
